--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2007,6 +2007,7 @@ input, select, textarea {
 		text-decoration: none;
 		border-bottom: none;
 		position: relative;
+		background-color: rgba(255, 255, 255, 0);
 	}
 
 		.icon:before {
@@ -2045,6 +2046,8 @@ input, select, textarea {
 		border: 0;
 		display: inline-block;
 		position: relative;
+		width: 30rem;
+		height: 12rem;
 		box-shadow: 2px 2px 5px grey;
 	}
 
@@ -3237,6 +3240,11 @@ input, select, textarea {
 #thank-you {
 	border: none;
 	box-shadow: none;
+}
+
+.link-icon {
+		width: 30rem;
+		height: 12rem;
 }
 
 
