update avatar size

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2152,7 +2152,7 @@ input, select, textarea {
 
 			.image.avatar img {
 				border-radius: 100%;
-				width: 100%;
+				width: 200%;
 			}
 
 /* List */
@@ -2621,7 +2621,7 @@ input, select, textarea {
 		left: 0;
 		padding: 8em 4em;
 		position: fixed;
-		text-align: right;
+		text-align: left;
 		top: 0;
 		width: 35%;
 	}
